// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abstract.ts [babel-ts] format 1`] = `
"Method 'foo' cannot have an implementation because it is marked abstract. (2:5)
  1 | class A {
> 2 |     abstract foo() {}
    |     ^
  3 | }"
`;

exports[`classAbstractMethodWithImplementation.ts [babel-ts] format 1`] = `
"Method 'foo' cannot have an implementation because it is marked abstract. (2:5)
  1 | abstract class A {
> 2 |     abstract foo() {}
    |     ^
  3 | }"
`;
